--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,4 @@
----
-title: "Progressing as a Software Engineer"
-date: 2021-01-19
----
-# title: Progressing as a Software Engineer
+title: Progressing as a Software Engineer
 author: Adrian
 email: mohabiradrian@gmail.com
 description: This blog is to track my progress and understanding of new programming concepts and lagnuages I learn. > # this means to ignore newlines until "baseurl:"
